apps/memos/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memos
  template:
    metadata:
      labels:
        app: memos
    spec:
      containers:
        - name: memos
          image: neosmemo/memos:stable
          ports:
            - containerPort: 5230
          volumeMounts:
            - name: memos-data
              mountPath: /var/opt/memos
        - name: caddy
          image: caddy:2.8
          ports:
            - containerPort: 443
            - containerPort: 80
          volumeMounts:
            - name: caddy-config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - name: caddy-data
              mountPath: /data
            - name: caddy-config-dir
              mountPath: /config
            - name: caddy-logs
              mountPath: /logs
      volumes:
        - name: memos-data
          persistentVolumeClaim:
            claimName: memos-pvc
        - name: caddy-config
          configMap:
            name: caddy-config
        - name: caddy-data
          emptyDir: {}
        - name: caddy-config-dir
          emptyDir: {}
        - name: caddy-logs
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: caddy-service
spec:
  selector:
    app: memos
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caddy-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.32
    ingress.cilium.io/loadbalancer-mode: dedicated
    # ingress.cilium.io/tls-passthrough: "enabled"
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - memos.inspection.alpha.canada.ca
      secretName: memos-tls
  rules:
    - host: memos.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: caddy-service
                port:
                  number: 443
