apps/memos/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos-ingress
  annotations:
    lbipam.cilium.io/ips: 10.140.79.32
    ingress.cilium.io/loadbalancer-mode: dedicated
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - memos.inspection.alpha.canada.ca
      secretName: memos-tls
  rules:
    - host: memos.inspection.alpha.canada.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: memos-service
                port:
                  number: 5230
